--- a/Cs_Tech-SystemTest/Web.config
+++ b/Cs_Tech-SystemTest/Web.config
@@ -5,7 +5,8 @@
   -->
 <configuration>
 <connectionStrings>
-    <add name="connection" connectionString="Data Source=(LocalDb)\LocalServer;Initial Catalog=MyDataBase;Trusted_Connection=True;Integrated Security=true;"></add>
+    <!--<add name="connection" connectionString="Data Source=(LocalDb)\LocalServer;Initial Catalog=MyDataBase;Trusted_Connection=True;Integrated Security=true;"></add>--> 
+  <add name="connection" connectionString="Server=tcp:webapppwithdb.database.windows.net,1433;Initial Catalog=firstsqldatabase;Persist Security Info=False;User ID=naveenajay337;Password=Nvn337@143;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"></add>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
