--- a/Cs_Tech-SystemTest/Cs_Tech-SystemTest.csproj
+++ b/Cs_Tech-SystemTest/Cs_Tech-SystemTest.csproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <Content Include="scripts\ai.0.22.9-build00167.js" />
     <Content Include="scripts\ai.0.22.9-build00167.min.js" />
+    <Content Include="Web_Pages\ViewAll.html" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
